# facebook_clone

./: .env.example  .gitignore  README.md  app.py  database.py  pm2-ngrok.yaml  pyproject.toml  requirements.txt  vercel.json
api/: app.py  blob_storage.py  database.py
api/templates/: edit_profile.html  feed.html  index.html  login.html  profile.html  register.html
src/facebook_clone/: __init__.py
templates/: base.html  create_post.html  edit_profile.html  feed.html  profile.html
userUpload/: README.md
